--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   firebase_core: ^2.21.0
-
+    # Firebase Database
+  cloud_firestore: ^4.12.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
