--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 
     # Firebase Database
   cloud_firestore: ^4.12.2
+  image_picker: ^1.0.4
+  carousel_slider: ^4.2.1
   
 dev_dependencies:
   flutter_test:
