--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.7
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
+  timeago: ^3.6.0
 
     # Firebase Database
   cloud_firestore: ^4.12.2
