--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.12.2
   image_picker: ^1.0.4
   carousel_slider: ^4.2.1
+  like_button: ^2.0.5
   
 dev_dependencies:
   flutter_test:
