--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   image_picker: ^1.0.4
   carousel_slider: ^4.2.1
   like_button: ^2.0.5
+  firebase_messaging: ^14.7.4
+  http: ^1.1.0
+  firebase_analytics: ^10.7.0
   
 dev_dependencies:
   flutter_test:
